# DataScienceAndComputing

./: CMakeLists.txt
Assignments/Week1/: 001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp
