cmake_minimum_required(VERSION 3.24)
project(DataScienceAndComputing)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignments_Week1_002 "Assignments/Week1/002.cpp")
add_executable(Assignments_Week1_001 Assignments/Week1/001.cpp)
add_executable(Assignments_Week1_003 Assignments/Week1/003.cpp)
add_executable(Assignments_Week1_004 Assignments/Week1/004.cpp)
add_executable(Assignments_Week1_005 Assignments/Week1/005.cpp)
add_executable(Assignments_Week1_006 Assignments/Week1/006.cpp)
add_executable(Assignments_Week1_007 Assignments/Week1/007.cpp)
add_executable(Assignments_Week1_008 Assignments/Week1/008.cpp)